--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,9 @@ body {
   font-family: arial;
 }
 :root {
-  --color: #0093e9;
-  --bg-color-form: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+  --color: #7367f0;
+  --bg-color-form: linear-gradient(160deg, #0093e9, #80d0c7);
+  --bg-color-btn: linear-gradient(135deg, #97abff 10%, #123597 100%);
 }
 #container {
   display: flex;
@@ -18,15 +19,14 @@ h1 {
   color: var(--color);
 }
 .formulario {
-  height: 40vh;
+  height: 300px;
   background: var(--bg-color-form);
   border-radius: 30px;
 }
 
 label,
 input {
-  /* display: flex; */
-  text-align: center;
+  width: 200px;
   margin: 10px;
   font-weight: bold;
   font-size: 15px;
@@ -34,10 +34,25 @@ input {
 
 .inputs {
   padding-top: 50px;
+  margin: 0 25px;
 }
 
 .btns {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+input,
+.btn {
+  cursor: pointer;
+  height: 30px;
+  border-radius: 10px;
+  border: solid 2px #000;
+}
+.btn {
+  transition: all 1.5s ease-in-out;
+  background-color: var(--bg-color-btn);
+}
+.btn:hover {
+  background-color: var(--color);
 }
