--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,9 @@ body {
 }
 :root {
   --color: #7367f0;
-  --bg-color-form: linear-gradient(160deg, #0093e9, #80d0c7);
-  --bg-color-btn: linear-gradient(135deg, #97abff 10%, #123597 100%);
+  --bg-color-form: linear-gradient(180deg, #0093e9, #80d0c7);
+  --bg-color-btn: linear-gradient(360deg, #0093e9, #80d0c7);
+  --bg-hover-btn: linear-gradient(90deg, #00dbde, #fc00ff);
 }
 #container {
   display: flex;
@@ -20,7 +21,7 @@ h1 {
 }
 .formulario {
   height: 300px;
-  background: var(--bg-color-form);
+  background-image: var(--bg-color-form);
   border-radius: 30px;
 }
 
@@ -30,18 +31,15 @@ input {
   margin: 10px;
   font-weight: bold;
   font-size: 15px;
+  padding: 5px;
 }
 
 .inputs {
   padding-top: 50px;
+  padding-left: 5px;
   margin: 0 25px;
 }
 
-.btns {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 input,
 .btn {
   cursor: pointer;
@@ -49,10 +47,31 @@ input,
   border-radius: 10px;
   border: solid 2px #000;
 }
-.btn {
-  transition: all 1.5s ease-in-out;
-  background-color: var(--bg-color-btn);
+div .btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: linear 2s ease-in-out;
 }
+
+.btn {
+  background-image: var(--bg-color-btn);
+}
+
 .btn:hover {
-  background-color: var(--color);
+  background-image: var(--bg-hover-btn);
+}
+
+.inserirSigno {
+  text-align: center;
+  color: var(--color);
+}
+
+p a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: bold;
+}
+p a:hover {
+  text-decoration: underline;
 }
