--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   --color: #7367f0;
   --bg-color-form: linear-gradient(180deg, #0093e9, #80d0c7);
   --bg-color-btn: linear-gradient(360deg, #0093e9, #80d0c7);
-  --bg-hover-btn: linear-gradient(90deg, #00dbde, #fc00ff);
+  --bg-hover-btn: linear-gradient(90deg, #00dbde, #0085ff);
 }
 #container {
   display: flex;
@@ -20,7 +20,7 @@ h1 {
   color: var(--color);
 }
 .formulario {
-  height: 300px;
+  height: 320px;
   background-image: var(--bg-color-form);
   border-radius: 30px;
 }
@@ -31,13 +31,17 @@ input {
   margin: 10px;
   font-weight: bold;
   font-size: 15px;
-  padding: 5px;
+  text-align: center;
 }
 
 .inputs {
-  padding-top: 50px;
-  padding-left: 5px;
-  margin: 0 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label:nth-child(1) {
+  margin-top: 20px;
 }
 
 input,
@@ -74,4 +78,24 @@ p a {
 }
 p a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 480px) {
+  .formulario {
+    margin: auto;
+    height: 380px;
+  }
+  div .btns {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 380px) {
+  .formulario {
+    height: 400px;
+    width: 300px;
+  }
+  .inserirSigno p {
+    padding: 10px 10px;
+  }
 }
